<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.awesoman.bigproject3.view.activity.MainActivity"
    android:orientation="vertical"
    >
    <include layout="@layout/toolbar"/>
    <com.example.awesoman.bigproject3.view.MyViewPager
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        ></com.example.awesoman.bigproject3.view.MyViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:enabled="true"
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/bg_fragment_btn_one"
            android:gravity="center|bottom"
            android:text="@string/fragment_1" />

        <TextView
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/bg_fragment_btn_two"
            android:gravity="center|bottom"
            android:enabled="true"
            android:text="@string/fragment_2" />

        <TextView
            android:id="@+id/btn3"
            android:enabled="true"
            android:layout_width="match_parent"
            android:drawableTop="@drawable/bg_fragment_btn_three"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:text="@string/fragment_3" />

        <TextView
            android:enabled="true"
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/bg_fragment_btn_four"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:text="@string/fragment_4" />
    </LinearLayout>
</LinearLayout>
