<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/update_goods_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="130sp"
        android:gravity="center_vertical"
        android:padding="@dimen/text_margin_bottom_identify">
    </android.support.v7.widget.RecyclerView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/text_padding_left_identify"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/text_margin_bottom_identify">
            <TextView
                android:id="@+id/icon_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_user" />
            <EditText
                android:id="@+id/et_goods_name"
                android:layout_width="match_parent"
                android:hint="@string/goods_name"
                android:layout_weight="1"
                android:layout_height="@dimen/text_height_regist"
                android:background="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height_identify"
            android:gravity="center_vertical"
            android:padding="@dimen/text_margin_bottom_identify">

            <TextView
                android:id="@+id/icon_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_user" />

            <EditText
                android:id="@+id/et_goods_price"
                android:layout_width="match_parent"
                android:hint="@string/goods_price"
                android:layout_height="@dimen/text_height_regist"
                android:background="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height_identify"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/text_padding_top_bottom"
            android:padding="@dimen/text_margin_bottom_identify">

            <TextView
                android:id="@+id/icon_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_password"/>

            <EditText
                android:hint="@string/goods_master"
                android:id="@+id/et_goods_master"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_height_regist"
                android:background="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height_identify"
            android:gravity="center_vertical"
            android:padding="@dimen/text_margin_bottom_identify">

            <TextView
                android:id="@+id/icon_goods_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_password" />

            <EditText
                android:id="@+id/et_goods_type"
                android:hint="@string/goods_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_height_regist"
                android:background="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height_identify"
            android:gravity="center_vertical"
            android:padding="@dimen/text_margin_bottom_identify">

            <TextView
                android:id="@+id/icon_passwordRe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_password" />

            <EditText
                android:id="@+id/et_goods_description"
                android:hint="@string/goods_description"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_height_regist"
                android:background="@color/white" />
        </LinearLayout>

        <Button
            android:text="@string/upload"
            android:id="@+id/confirm_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orangeAlpha"/>

    </LinearLayout>
</LinearLayout>
