<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_personal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellow">
    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:id="@+id/personal_icon"
        android:background="@drawable/btn_white_bg"
        android:paddingLeft="@dimen/text_padding_left_identify"
        android:paddingTop="@dimen/text_padding_top_bottom"
        android:paddingBottom="@dimen/text_padding_top_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_bottom_identify"
        >
        <TextView
            android:gravity="center|left"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_identify"
            android:text="@string/my_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/img_icon"
            android:layout_gravity="center"
            android:layout_width="@dimen/text_height_identify"
            android:layout_height="@dimen/text_height_identify"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        <TextView
            android:layout_width="@dimen/selector_size_identify"
            android:layout_height="@dimen/selector_size_identify"
            android:textSize="@dimen/text_size_identify"
            android:layout_gravity="center_vertical|right"
            android:background="@drawable/identify_selector" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/personal_nickname"
        android:background="@drawable/btn_white_bg"
        android:paddingLeft="@dimen/text_padding_left_identify"
        android:paddingTop="@dimen/text_padding_top_bottom"
        android:paddingBottom="@dimen/text_padding_top_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_bottom_identify">
        <TextView
            android:gravity="center|left"
            android:layout_weight="1"
            android:text="@string/nickname"
            android:textSize="@dimen/text_size_identify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_nickname"
            android:textSize="@dimen/text_size_identify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        <TextView
            android:layout_width="@dimen/selector_size_identify"
            android:layout_height="@dimen/selector_size_identify"
            android:layout_gravity="center_vertical|right"
            android:background="@drawable/identify_selector" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/personal_username"
        android:background="@drawable/btn_white_bg"
        android:paddingLeft="@dimen/text_padding_left_identify"
        android:paddingTop="@dimen/text_padding_top_bottom"
        android:paddingBottom="@dimen/text_padding_top_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_bottom_identify">
        <TextView
            android:gravity="center|left"
            android:layout_weight="1"
            android:text="@string/username"
            android:textSize="@dimen/text_size_identify"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_username"
            android:textSize="@dimen/text_size_identify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        <TextView
            android:visibility="invisible"
            android:layout_width="@dimen/selector_size_identify"
            android:layout_height="@dimen/selector_size_identify"
            android:layout_gravity="center_vertical"
            android:background="@drawable/identify_selector" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/personal_name"
        android:background="@drawable/btn_white_bg"
        android:paddingLeft="@dimen/text_padding_left_identify"
        android:paddingTop="@dimen/text_padding_top_bottom"
        android:paddingBottom="@dimen/text_padding_top_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_bottom_identify">
        <TextView
            android:gravity="center|left"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="@dimen/text_size_identify"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_name"
            android:textSize="@dimen/text_size_identify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        <TextView
            android:visibility="invisible"
            android:layout_width="@dimen/selector_size_identify"
            android:layout_height="@dimen/selector_size_identify"
            android:layout_gravity="center_vertical"
            android:background="@drawable/identify_selector" />
    </LinearLayout>
    <TextView
        android:id="@+id/unregist"
        android:layout_marginTop="200sp"
        android:paddingTop="@dimen/text_padding_top_bottom"
        android:paddingBottom="@dimen/text_padding_top_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_white_bg"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/unregist"
        android:textSize="@dimen/text_size_identify" />
</LinearLayout>
