<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:background="@color/orange">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/mine"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_identify" />

        <com.example.awesoman.bigproject3.view.CircleImageView
            android:id="@+id/my_icon"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/person_icon"
             />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center">
            <TextView
                android:id="@+id/after_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_identify"/>
            <LinearLayout
                android:id="@+id/before_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_identify" />

                <TextView
                    android:layout_width="3sp"
                    android:layout_height="@dimen/text_size_identify"
                    android:layout_gravity="center"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/regist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/regist"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_identify" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/personal_msg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height_identify"
            android:layout_marginBottom="@dimen/text_margin_bottom_identify"
            android:background="@drawable/btn_white_bg"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/text_padding_left_identify">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="个人信息"
                android:textSize="@dimen/text_size_identify" />

            <TextView
                android:layout_width="@dimen/selector_size_identify"
                android:layout_height="@dimen/selector_size_identify"
                android:layout_gravity="center_vertical|right"
                android:background="@drawable/identify_selector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/personal_goods"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height_identify"
            android:layout_marginBottom="@dimen/text_margin_bottom_identify"
            android:background="@drawable/btn_white_bg"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/text_padding_left_identify">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="商品信息"
                android:textSize="@dimen/text_size_identify" />

            <TextView
                android:layout_width="@dimen/selector_size_identify"
                android:layout_height="@dimen/selector_size_identify"
                android:layout_gravity="center_vertical|right"
                android:background="@drawable/identify_selector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/upload_goods"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height_identify"
            android:layout_marginBottom="@dimen/text_margin_bottom_identify"
            android:background="@drawable/btn_white_bg"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/text_padding_left_identify">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="上传信息"

                android:textSize="@dimen/text_size_identify" />

            <TextView
                android:layout_width="@dimen/selector_size_identify"
                android:layout_height="@dimen/selector_size_identify"
                android:layout_gravity="center_vertical|right"
                android:background="@drawable/identify_selector" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
